<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">zTorch</string>
    <string name="about_text">Developed by Derek Ziemba \nTwitter @derekziemba</string>
    <string name="about_donation">If you enjoy this app please donate via BitCoin or DogeCoin!</string>
    <string name="about_bitcoin">BitCoin Address:</string>
    <string name="about_bitcoin_address">159MyZaUyPHy2UDBSBAzkMBHBYEFeMQXQz</string>
    <string name="about_dogecoin">DogeCoin Address:</string>
    <string name="about_dogecoin_address">DQpqcC1gtzu6FniDKe3KyUm8ZQyT5SgGHB</string>
    <string name="about_bugs">Known Issue: \n None, contact me if you find one.</string>
    <string name="action_set_widget_brightness">Set widget default brightness to current brightness</string>
    <string name="action_toggle_button">Torch Toggle</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    
    <string name="current_level">  Brightness: </string>
    <string name="current_level_value">%s</string>
    <string name="current_limit_val_txt">Current Brightness Limit:  </string>
    <string name="current_limit_val"> %s </string>
    <string name="current_default_brightness">Current Brightness Default:  %s</string>
    <string name="device_not_rooted">The device is not rooted, please root your device and restart the application.</string>
    <string name="error">Error!</string>
    <string name="hello_world">WARNING: To prevent damange do not use maximum brightness for extended times. \n\nYou are responsible for any damage caused to your device due to prolonged usage of the torch at a high brightness. \n\nYou can limit the maximum possible brightness in the action menu.</string>
    <string name="no_sysfs_file">This phone does not support adjustable and high brightness settings. \n Program will now uninstall.</string>
    <string name="notification_text_tap_to_open">Tap to open Main Activity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="question">\?</string>
    <string name="set_string"> %s </string>
    <string name="root_access_not_given">Root Access has been denied to this app. You must allow access to use higher than stock brightness settings and use adjustable brightness.</string>
    <string name="seek_bar">Brightness Slider</string>
    <string name="set_maximum">Set maximum value</string>
    <string name="set_max_torch_limit_instructions">Use the slider below to limit max brightness.\nCurrent value: %s</string>
    <string name="slider_instructions"> REPLACE \n Current value: %s</string>
    <string name="settings_torch_method"> Torch Method </string>
    <string name="settings_torch_method_description"> Only the Root Access Torch can provide very high brightness and adjustable brightness. \n \nOther methods allow switching on and off only.</string>
    <string name="ticker_text">zTorch enabled</string>
    <string name="toast_set_widget_off">Turn on torch first!</string>
    <string name="toast_toggle_on">Torch Activated</string>
    <string name="toast_toggle_off">Torch Deactivated</string>
    <string name="toast_done">Done</string>
    <string name="uninstall_and_quit">Quit and uninstall</string>
    <string name="widget_label">Adjustable Torch</string>
    <string name="widget_static_label">Fixed Torch</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_torch_player">TorchPlayer</string>
    <string name="TorchPlayer">EXPERIMENTAL:  \nPlay a string of torch commands.  \nAllows for Strobing and etc. 
        \n\nThe Format is: \n   (level)/(time), (level)/(time), etc.
        \n\nRaw time values are measured in milliseconds.  
        \nTo specifiy seconds or minutes, use s or m following the raw time value</string>
	<string name="action_torch_player">TorchPlayer</string>
	<string name="editable"> %s </string>
	<string name="TorchPlayerPlayButton">Play</string>
	<string name="TorchPlayerStop">Stop</string>
</resources>
