<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="102dp"
        android:text="@string/about_bitcoin" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="41dp"
        android:text="@string/about_donation" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/TextView02"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:text="@string/about_bitcoin_address" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/TorchPlayerInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/valueTapTime_TXTVIEW"
        android:layout_alignRight="@+id/EditText01"
        android:layout_below="@+id/valueTapTime_TXTVIEW"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:text="@string/about_dogecoin_address" />
 
    <TextView
        android:id="@+id/valueTapTime_TXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_below="@+id/EditText01"
        android:layout_marginTop="23dp"
        android:text="@string/about_dogecoin" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TorchPlayerInstructions"
        android:layout_below="@+id/TorchPlayerInstructions"
        android:layout_marginTop="14dp"
        android:text="@string/about_bugs" />

</RelativeLayout>