<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/TorchPlayer" />

    <EditText
        android:id="@+id/TorchPlayerInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/editable" >

        <requestFocus />
    </EditText>

    <ToggleButton
        android:id="@+id/TorchPlayerPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TorchPlayerInstructions"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="ToggleButton"
        android:textOff="@string/TorchPlayerPlayButton"
        android:textOn="@string/TorchPlayerStop" />

    <CheckBox
        android:id="@+id/repeatCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TorchPlayerInstructions"
        android:layout_below="@+id/TorchPlayerInstructions"
        android:layout_marginTop="18dp"
        android:text="Repeat" />

</RelativeLayout>

