<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <SeekBar
        android:id="@+id/flashlightBrightnessSlider"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:max="16" />

    <ToggleButton
        android:id="@+id/flashlightToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ppButton"
        android:layout_alignLeft="@+id/flashlightBrightnessSlider"
        android:layout_alignRight="@+id/ppButton"
        android:layout_marginBottom="30dp"
        android:text="@string/action_toggle_button" />

    <Button
        android:id="@+id/ppButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/flashlightBrightnessSlider"
        android:layout_alignRight="@+id/flashlightBrightnessSlider"
        android:layout_marginBottom="20dp"
        android:text="++" />

    <Button
        android:id="@+id/pButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ppButton"
        android:layout_alignBottom="@+id/ppButton"
        android:layout_toLeftOf="@+id/ppButton"
        android:text="+" />

    <Button
        android:id="@+id/nnButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nButton"
        android:layout_alignBottom="@+id/nButton"
        android:layout_alignLeft="@+id/flashlightBrightnessSlider"
        android:text="--" />

    <Button
        android:id="@+id/nButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pButton"
        android:layout_alignBottom="@+id/pButton"
        android:layout_toRightOf="@+id/nnButton"
        android:text="-" />

    <Button
        android:id="@+id/widgetLevelButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/flashlightToggleButton"
        android:layout_alignLeft="@+id/flashlightToggleButton"
        android:layout_alignRight="@+id/ppButton"
        android:layout_marginBottom="30dp"
        android:text="@string/action_set_widget_brightness" />

    <TextView
        android:id="@+id/textViewDefaultBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/flashlightToggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/current_default_brightness" />

    <TextView
        android:id="@+id/textViewCurrentLimitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewCurrentLimit"
        android:layout_alignBottom="@+id/textViewCurrentLimit"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/current_limit_val_txt" />

    <TextView
        android:id="@+id/textViewCurrentLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="11dp"
        android:layout_toRightOf="@+id/textViewCurrentLimitText"
        android:text="@string/current_limit_val" />

    <TextView
        android:id="@+id/textViewCurrentLimitSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/flashlightBrightnessSlider"
        android:layout_alignTop="@+id/flashlightBrightnessSlider"
        android:text="@string/current_limit_val" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/flashlightBrightnessSlider"
        android:layout_alignTop="@+id/flashlightBrightnessSlider"
        android:text="0" />

    <TextView
        android:id="@+id/textViewSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/flashlightBrightnessSlider"
        android:layout_centerHorizontal="true"
        android:text="@string/seek_bar" />

    <TextView
        android:id="@+id/valueTapTime_TXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/current_level" />

    <TextView
        android:id="@+id/textViewBrightnessValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewCurrentLimit"
        android:layout_alignTop="@+id/pButton"
        android:text="@string/current_level_value" />

</RelativeLayout>